--- a/build.gradle
+++ b/build.gradle
@@ -16,10 +16,14 @@ repositories {
 }
 
 dependencies {
-    compileOnly group: 'javax.servlet', name: 'servlet-api', version: '2.5'
+    compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
+
+    compile group: 'org.apache.commons', name: 'commons-dbcp2', version: '2.1.1'
+    compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.2.3'
 
     compile group: 'org.springframework', name: 'spring-context', version: springVersion
     compile group: 'org.springframework', name: 'spring-webmvc', version: springVersion
+    compile group: 'org.springframework', name: 'spring-jdbc', version: springVersion
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
