--- a/build.gradle
+++ b/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile group: 'org.springframework', name: 'spring-jdbc', version: springVersion
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.mockito', name:'mockito-core', version:'1.10.19'
 }
